--- a/anomaly_detection/docs/XGBoostBreakdown.ipynb
+++ b/anomaly_detection/docs/XGBoostBreakdown.ipynb
@@ -13,6 +13,10 @@
     "\n",
     "Nous simulons également le cas où il y a de nouvelle données rentrée par l'utilisateur de facons à observé les cas de dérive des données.\n",
     "\n",
+    "*Glossaire de la maintenance :* \n",
+    "- $MTBF$ et $MTBUR$ : Mean Time Between Failure/Unschedulled-Removal, lié à la fiabilité du système. Principalement utilisé dans l'electronique.\n",
+    "- $RUL$ : Remaining Usefull life, lié à la durée de vie restante. Principalement utilisé dans les sytèmes avec usure (ex : pneu).\n",
+    "\n",
     "## Objectifs\n",
     "\n",
     "1. **Générer un Dataset Synthétique** : Utiliser `make_classification` de `sklearn` pour créer un dataset avec des pannes rares.\n",
