example notebook for failure prediction flow

--- a/anomaly_detection/docs/XGBoostBreakdown.ipynb
+++ b/anomaly_detection/docs/XGBoostBreakdown.ipynb
@@ -17,6 +17,8 @@
     "- $MTBF$ et $MTBUR$ : Mean Time Between Failure/Unschedulled-Removal, lié à la fiabilité du système. Principalement utilisé dans l'electronique.\n",
     "- $RUL$ : Remaining Usefull life, lié à la durée de vie restante. Principalement utilisé dans les sytèmes avec usure (ex : pneu).\n",
     "\n",
+    "L'objectif de la maintenance prédictive correspond à prédire la prochaine panne à partir de signaux faibles.\n",
+    "\n",
     "## Objectifs\n",
     "\n",
     "1. **Générer un Dataset Synthétique** : Utiliser `make_classification` de `sklearn` pour créer un dataset avec des pannes rares.\n",
