example notebook for failure prediction flow

--- a/anomaly_detection/docs/XGBoostBreakdown.ipynb
+++ b/anomaly_detection/docs/XGBoostBreakdown.ipynb
@@ -17,7 +17,7 @@
     "- $MTBF$ et $MTBUR$ : Mean Time Between Failure/Unschedulled-Removal, lié à la fiabilité du système. Principalement utilisé dans l'electronique.\n",
     "- $RUL$ : Remaining Usefull life, lié à la durée de vie restante. Principalement utilisé dans les sytèmes avec usure (ex : pneu).\n",
     "\n",
-    "L'objectif de la maintenance prédictive correspond à prédire la prochaine panne à partir de signaux faibles.\n",
+    "L'objectif de la maintenance prédictive correspond à prédire la prochaine panne à partir de signaux faibles. C'est à dire, des signaux qui n'ont pas de corrélation linéaire évidente, mais qui sont énonciateur d'un phénomène (pouvant amener à une corrélation linéaire ou non).\n",
     "\n",
     "## Objectifs\n",
     "\n",
